fixes autotype text on tablet

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -279,12 +279,6 @@ nav {
 .icon {
   margin-right: 2rem;
   text-align: center;
+  color: $color_black;
 }
 
-//.show {
-//  display: block;
-//}
-//
-//.hide {
-//  display: none;
-//}
